--- a/app/views/refinery/directory/categories/show.html.erb
+++ b/app/views/refinery/directory/categories/show.html.erb
@@ -1,27 +1,14 @@
-<% content_for :body_content_title do %>
-  <%= @category.title %>
-<% end %>
-
 <% content_for :body_content_left do %>
-  <section>
-    <h1>Title</h1>
-    <p>
-      <%=raw @category.title %>
-    </p>
-  </section>
-<% end %>
-
-<% content_for :body_content_right do %>
-  <aside>
-    <h2><%= t('.other') %></h2>
-    <ul id="categories">
-      <% @categories.each do |category| %>
-        <li>
-          <%= link_to category.title, refinery.directory_category_path(category) %>
-        </li>
-      <% end %>
-    </ul>
-  </aside>
+  <ul id="contacts">
+    <%contacts = @category.contacts%>
+    <% contacts.each do |contact| %>
+      <li>
+        <%= link_to contact.name, refinery.directory_contact_path(contact) %>
+      <br>
+        <%= contact.abstract%>
+      </li>
+    <% end %>
+  </ul>
 <% end %>
 
 <%= render '/refinery/content_page' %>
