Added :value to hidden author field

--- a/app/views/refinery/directory/admin/contacts/_form.html.erb
+++ b/app/views/refinery/directory/admin/contacts/_form.html.erb
@@ -119,7 +119,7 @@
     <%= f.text_field :tag_list, :class => 'larger' -%>
   </div>
 
-  <%= f.hidden_field :user_id, current_refinery_user.id %>
+  <%= f.hidden_field :user_id, :value => current_refinery_user.id %>
 
   <%= render '/refinery/admin/form_actions', :f => f,
              :continue_editing => false,
